--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@ target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
+!**/src/main/**/out/
+!**/out
 
 ### STS ###
 .apt_generated
